fix: make explicit max reconciles
Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -38,6 +38,7 @@ spec:
         args:
         - controller
         - --leader-elect
+        - --max-concurrent-reconciles=10
         - --config-map-name=$(OPERATOR_DEPLOYMENT_NAME)-config
         - --secret-name=$(OPERATOR_DEPLOYMENT_NAME)-config
         - --webhook-port=9443
