fix: add missing Database fields
Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

--- a/config/olm-manifests/bases/cloudnative-pg.clusterserviceversion.yaml
+++ b/config/olm-manifests/bases/cloudnative-pg.clusterserviceversion.yaml
@@ -795,6 +795,9 @@ spec:
       - path: databaseReclaimPolicy
         displayName: Database reclaim policy
         description: Specifies the action to take for the database inside PostgreSQL when the associated object in Kubernetes is deleted. Options are to either delete the database or retain it for future management.
+        x-descriptors:
+          - 'urn:alm:descriptor:com.tectonic.ui:select:delete'
+          - 'urn:alm:descriptor:com.tectonic.ui:select:retain'
       - path: cluster
         displayName: Cluster requested to create the database
         description: Cluster in which to create the database
@@ -804,6 +807,12 @@ spec:
       - path: owner
         displayName: Database Owner
         description: Owner of the database that will be created in Postgres
+      - path: ensure
+        displayName: Ensure
+        description: Ensure the PostgreSQL database is `present` or `absent`
+        x-descriptors:
+          - 'urn:alm:descriptor:com.tectonic.ui:select:present'
+          - 'urn:alm:descriptor:com.tectonic.ui:select:absent'
       - path: icuLocale
         displayName: ICU locale
         description: ICU locale to use for the database
@@ -813,6 +822,12 @@ spec:
       - path: icuRules
         displayName: ICU rules
         description: Additional customization of ICU locale
+        x-descriptors:
+          - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - 'urn:alm:descriptor:com.tectonic.ui:advanced'
+      - path: locale
+        displayName: Locale
+        description: Sets the default collation order and character classification for the database.
         x-descriptors:
           - 'urn:alm:descriptor:com.tectonic.ui:text'
           - 'urn:alm:descriptor:com.tectonic.ui:advanced'
@@ -828,6 +843,12 @@ spec:
         x-descriptors:
           - 'urn:alm:descriptor:com.tectonic.ui:text'
           - 'urn:alm:descriptor:com.tectonic.ui:advanced'
+      - path: localeProvider
+        displayName: Locale Provider
+        description: Specifies the provider to use for the default collation in this database (Available from PostgreSQL 16).
+        x-descriptors:
+          - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - 'urn:alm:descriptor:com.tectonic.ui:advanced'
       - path: collationVersion
         displayName: Collation version
         description: The version identifier of the collation
@@ -837,6 +858,42 @@ spec:
       - path: builtinLocale
         displayName: Builtin locale
         description: The choice of which builtin locale to use
+        x-descriptors:
+          - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - 'urn:alm:descriptor:com.tectonic.ui:advanced'
+      - path: allowConnections
+        displayName: Allow Connections
+        description: If false, then no one can connect to this database
+        x-descriptors:
+          - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+          - 'urn:alm:descriptor:com.tectonic.ui:advanced'
+      - path: connectionLimit
+        displayName: Connection Limit
+        description: How many concurrent connections can be made to this database
+        x-descriptors:
+          - 'urn:alm:descriptor:com.tectonic.ui:number'
+          - 'urn:alm:descriptor:com.tectonic.ui:advanced'
+      - path: encoding
+        displayName: Encoding
+        description: Character set encoding to use in the database
+        x-descriptors:
+          - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - 'urn:alm:descriptor:com.tectonic.ui:advanced'
+      - path: isTemplate
+        displayName: Database is a template
+        description: If true, this database is considered a template
+        x-descriptors:
+          - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+          - 'urn:alm:descriptor:com.tectonic.ui:advanced'
+      - path: tablespace
+        displayName: Tablespace
+        description: The name of the tablespace that will be associated with the database.
+        x-descriptors:
+          - 'urn:alm:descriptor:com.tectonic.ui:text'
+          - 'urn:alm:descriptor:com.tectonic.ui:advanced'
+      - path: template
+        displayName: Template
+        description: The name of the template from which to create this database.
         x-descriptors:
           - 'urn:alm:descriptor:com.tectonic.ui:text'
           - 'urn:alm:descriptor:com.tectonic.ui:advanced'
