--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -3558,7 +3558,7 @@ spec:
                                         not set, the implementation will apply its default routing strategy. If set
                                         to "PreferClose", implementations should prioritize endpoints that are
                                         topologically close (e.g., same zone).
-                                        This is an alpha field and requires enabling ServiceTrafficDistribution feature.
+                                        This is a beta field and requires enabling ServiceTrafficDistribution feature.
                                       type: string
                                     type:
                                       description: |-
